fix some icon alignment issues

--- a/app/assets/stylesheets/gatekeeper/_base.styl
+++ b/app/assets/stylesheets/gatekeeper/_base.styl
@@ -69,6 +69,7 @@
   .fa-users
     position: absolute
     left: 15px
+    top: 12px
     font-size: 14px
 
 // Adjust base font size // YOLO
