--- a/app/assets/stylesheets/layouts/content_type_editor.styl
+++ b/app/assets/stylesheets/layouts/content_type_editor.styl
@@ -238,7 +238,6 @@
     .fa-globe,
     .fa-header
       position: relative
-      top: 1px
     text-transform: uppercase
     letter-spacing: 1px
     font-size: 11px
