--- a/app/assets/stylesheets/layouts/tab_list.styl
+++ b/app/assets/stylesheets/layouts/tab_list.styl
@@ -75,7 +75,7 @@
     font-weight: normal
   i.fa-circle
     opacity: 1
-    top: 8px
+    top: 12px
     color: $blue-light
     font-size: 8px
   i.fa-circle.draft
