--- a/app/assets/stylesheets/objects/buttons.styl
+++ b/app/assets/stylesheets/objects/buttons.styl
@@ -183,7 +183,6 @@ li.btn--danger
   line-height: 30px
   padding: 0
   padding-left: 4px
-  padding-top: 4px
   text-align: center
   vertical-align: middle
   box-shadow: none
@@ -213,7 +212,6 @@ li.btn--danger
 // An Icon inside a button
 .button-icon
   position: relative
-  top: 1px
   right: 2px
 
 .button-icon-right
@@ -224,10 +222,16 @@ li.btn--danger
   left: 3px
 
 // Tweaks for specific icons
+.button-icon
+  &.fa-caret-down
+    top: 5px
+.button-icon-right
+  &.fa-caret-down
+    top: 3px
 .button-icon,
 .button-icon-right
   &.fa-caret-down
-    font-size: 0.8em
+    font-size: 13px
   &.fa-plus
     font-size: 0.9em
   &.fa-angle-right
