--- a/app/assets/stylesheets/objects/knowledge_base.styl
+++ b/app/assets/stylesheets/objects/knowledge_base.styl
@@ -12,6 +12,7 @@
 .knowledge-base-icon
   color: $gray
   display: inline-block
+  position: relative
   &:link,
   &:visited
     color: $gray
@@ -19,5 +20,6 @@
     color: $gray-darkest
   .tooltip-inner
     width: 200px
+
 
 
